--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-flip-move": "^3.0.4",
     "react-moment": "^0.9.7",
     "react-scripts": "3.4.3",
     "react-twitter-embed": "^3.0.3"
