--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^16.13.1",
     "react-flip-move": "^3.0.4",
     "react-moment": "^0.9.7",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "react-twitter-embed": "^3.0.3"
   },
